k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carmelolg-nodejs-scaffold-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: carmelolg-nodejs-scaffold
