k8s-ingress-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-scaffold-ingress-default
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: scaffold.carmelolg.io
    http:
      paths:
      - backend:
          service:
            name: carmelolg-nodejs-scaffold-service
            port:
              number: 80
        path: /
        pathType: Prefix
