k8s-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carmelolg-nodejs-scaffold-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 404 20m;
      proxy_cache_use_stale error timeout updating http_404 http_500 http_502 http_503 http_504;
      proxy_cache_bypass $http_x_purge;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  ingressClassName: nginx
  rules:
  - host: scaffold.carmelolg.io
    http:
      paths:
      - backend:
          service:
            name: carmelolg-nodejs-scaffold-service
            port:
              number: 80
        path: /carmelolg(/|$)(.*)
        pathType: Prefix
